--- a/miniprogram/pages/Concat/concat.wxml
+++ b/miniprogram/pages/Concat/concat.wxml
@@ -1,5 +1,20 @@
 <!--pages/Concat/concat.wxml-->
+<view class="contacts">
+  <view class="letter" wx:for="{{letters}}" wx:key="{{index}}">
+    <text class="letter-text">{{item}}</text>
+  </view>
+</view>
+
 <view class="contact-list">
+  <view class="search-bar">
+  <input class="search-input" placeholder="请输入搜索关键字..." bindinput="onInputChange"></input>
+  <button class="search-button" bindtap="onSearch">搜索</button>
+</view>
+<view class="search-result">
+  <view wx:for="{{searchResult}}" wx:key="{{index}}">
+    <text>{{item}}</text>
+  </view>
+</view>
   <view wx:for="{{contacts}}" wx:key="{{index}}">
     <view class="contact-item">
       <image class="avatar" src="{{item.avatar}}"></image>
