--- a/miniprogram/pages/Mine/mine.wxss
+++ b/miniprogram/pages/Mine/mine.wxss
@@ -1,1 +1,59 @@
 /* pages/Mine/mine.wxss */
+
+.userprofile-container{
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+.userBasicList{
+  display: flex;
+}
+.userBasicList-infoList-wrapper{
+  display: flex;
+  align-items: center;
+}
+.userBasicList-infoList-item{
+  font-size: 8px;
+}
+.user-avatar{
+height: 40px;
+width: 40px;
+margin-right: 10px;
+}
+.userBasicList-username{
+  margin-right: 10px;
+}
+.userBasicList-present-icon{
+  height: 15px;
+  width: 15px;
+}
+
+.userBasicList-infoList-wrapper-openId{
+font-size: 12px;
+}
+
+.ConsequenceList-wrapper{
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+}
+.ConsequenceList-wrapper-List{
+  margin-top: 2px;
+  display: flex;
+  width: 100%;
+  height: 30px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.ConsequenceList-icon{
+  width: 13px;
+  height: 13px;
+}
+.ConsequenceList-text{
+height: 40px;
+display: flex;
+align-items: center;
+font-weight: 700;
+font-size: 13px;
+}
